--- a/source/tripmate-ng/src/app/core/sidenav/sidenav.component.html
+++ b/source/tripmate-ng/src/app/core/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-nav-list>
+<!-- <mat-nav-list>
   <mat-list-item>
     <button class="menu-item" mat-flat-button>
       <mat-icon>dashboard</mat-icon>
@@ -20,4 +20,5 @@
       </button>
     </mat-list-item>
 </mat-nav-list>
-
+ -->
+<app-init></app-init>
