--- a/source/tripmate-ng/src/app/app.component.css
+++ b/source/tripmate-ng/src/app/app.component.css
@@ -1,25 +1,26 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .sidenav-container {
-  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1;
+    flex: 1;
 }
 
 .sidenav-container {
-  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+    /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
      `<body>` to be our scrolling element for mobile layouts. */
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .right-sidenav {
-  width: 200px;
+    width: 35%;
+    min-width: 400px;
 }
