--- a/source/tripmate-ng/src/app/core/page/page.component.css
+++ b/source/tripmate-ng/src/app/core/page/page.component.css
@@ -8,23 +8,7 @@
     height: 100%;
 }
 
-h1 {
-    font-weight: 300;
-    font-size: 40px;
-    color: rgba(0, 0, 0, 0.87);
-}
-
-input {
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    outline: none;
-    padding: 6px 16px;
+agm-map {
+    height: 100%;
     width: 100%;
-    max-width: 375px;
-    font-size: 16px;
-    line-height: 34px;
-}
-
-.spacer {
-    height: 20px;
 }
