--- a/source/tripmate-ng/src/app/core/step-two/step-two.component.css
+++ b/source/tripmate-ng/src/app/core/step-two/step-two.component.css
@@ -1,11 +1,11 @@
 table {
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
 }
 
 .selector-container {
     width: 80%;
-    min-width: 600px;
+    min-width: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -17,7 +17,7 @@ table {
 [class*='mat-column-'] {
     word-wrap: break-word !important;
     white-space: unset !important;
-    flex: 0 0 28% !important;
+    flex: 0 0 80% !important;
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: break-word;
@@ -29,7 +29,7 @@ table {
 }
 
 .mat-column-name {
-    width: 35%;
+    width: 80%;
     min-width: 104px !important;
 }
 
